--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-supabase==2.22.2
-python-dotenv==1.1.1
+flask==2.3.3
+flask-cors==4.0.0
+requests==2.31.0
+supabase==2.3.4
+sentence-transformers==2.2.2
+numpy==1.24.3
+python-dotenv==1.0.0
+langchain==0.1.0
+langchain-community==0.0.10
+langchain-core==0.1.10
 pandas==2.1.4
